<resources>

    <string name="app_name">抽號系統</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="TakeNumber">抽號</string>
    <string name="title_activity_take_number">TakeNumberActivity</string>
    <string name="title_activity_select_item">SelectItemActivity</string>
    <string name="nowvalue">現在號碼：</string>
    <string name="totalvalue">總號碼：</string>
    <string name="distance">距離：</string>
    <string name="MyNumber">我的號碼:</string>
    <string name="ChangeNumber">換號</string>
    <string name="title_activity_look_up_change_number_page">LookUpChangeNumberPage</string>
    <string name="OwnerText">持有人:</string>
    <string name="NumberText">號碼:</string>
    <string name="title_activity_type2_item_list">Type2ItemList</string>
    <string name="Count">個</string>
    <string name="EachPrice">單價:</string>
    <string name="NeedText">需</string>
    <string name="Submit">送出</string>
    <string name="title_activity_preference">PreferenceActivity</string>
    <string name="title_activity_setting">settingActivity</string>

</resources>