<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/WaitingItemListViewLinearLayout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/StoreName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="35dp" />

		 <TextView
		     android:id="@+id/ItemName"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignBaseline="@+id/StoreName"
		     android:layout_alignBottom="@+id/StoreName"
		     android:layout_marginLeft="10dp"
		     android:layout_toRightOf="@+id/StoreName"
		     android:text="text"
		     android:textAppearance="?android:attr/textAppearanceMedium"
		     android:textColor="#0000FF"
		     android:textSize="25dp" />

		 <TextView
		     android:id="@+id/alert"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignParentRight="true"
		     android:layout_centerVertical="true"
		     android:layout_marginRight="20dp"
		     android:text=""
		     android:textColor="#FF0000"
		     android:textAppearance="?android:attr/textAppearanceMedium" />

		 <TextView
		     android:id="@+id/DistanceText"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignBottom="@+id/StoreName"
		     android:layout_marginLeft="18dp"
		     android:layout_toRightOf="@+id/ItemName"
		     android:text="@string/distance" />

		 <TextView
		     android:id="@+id/textView5"
		     android:layout_width="wrap_content"
		     android:layout_height="wrap_content"
		     android:layout_alignBottom="@+id/ItemName"
		     android:layout_toRightOf="@+id/DistanceText"
		     android:text="" />

         <TextView
             android:id="@+id/DistanceValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/ItemName"
             android:layout_alignLeft="@+id/textView5"
             android:text="TextView" />
         <TextView
             android:id="@+id/MeterText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/ItemName"
             android:layout_toRightOf="@+id/DistanceValue"
             android:text="m" />

    </RelativeLayout>
     <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_weight="0.06"
        android:layout_height="30dp" >

         <TextView
             android:id="@+id/MyValueText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/MyNumber"
             android:textSize="20dp" />

         <TextView
             android:id="@+id/NowValueText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/NowValue"
             android:text="@string/nowvalue"
             android:textSize="20dp" />

         <TextView
             android:id="@+id/MyValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_toRightOf="@+id/MyValueText"
             android:text="TextView"
             android:textSize="20dp" />

         <TextView
             android:id="@+id/NowValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:text="TextView"
             android:textSize="20dp" />

    </RelativeLayout>

</LinearLayout>